--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0
+  margin: 0;
+  font-family: 'Roboto'
 }
 header{
     background:#03a9f4;
@@ -19,7 +20,7 @@ header input {
 .newsItem {
   padding:20px;
   box-sizing: border-box;
-  border-bottom:1px solid grey,
+  border-bottom:1px solid grey;
 }
 
 .newsItem:hover{
